force-app/main/default/objects/Tratamiento__c/fields/Tiempo_de_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_tratamiento__c</fullName>
    <formula>MONTH(TODAY()) - MONTH(Cuenta__r.Fecha_de_cambio_de_estado__c ) + 12 * (YEAR(TODAY()) - YEAR(Cuenta__r.Fecha_de_cambio_de_estado__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de tratamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>