force-app/main/default/objects/Tratamiento__c/fields/Tipo_de_diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_diagnostico__c</fullName>
    <label>Tipo de diagnóstico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agudo</fullName>
            </value>
            <value>
                <fullName>Crónico</fullName>
            </value>
            <value>
                <fullName>Paleativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>