force-app/main/default/objects/Tratamiento__c/fields/Tipo_de_Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Obra_Social__c</fullName>
    <label>Tipo de Obra Social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepaga</fullName>
            </value>
            <value>
                <fullName>Obra Social Nacional</fullName>
            </value>
            <value>
                <fullName>Obra Social Provincial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>