force-app/main/default/objects/Tratamiento__c/fields/Tipo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_paciente__c</fullName>
    <formula>Cuenta__r.Tipo_de_paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de paciente</label>
    <type>Text</type>
</CustomField>