force-app/main/default/objects/Tratamiento__c/fields/Urticaria__c.field-meta.xml
<CustomField>
    <fullName>Urticaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urticaria</label>
    <type>Checkbox</type>
</CustomField>