force-app/main/default/objects/Tratamiento__c/fields/Vomitos__c.field-meta.xml
<CustomField>
    <fullName>Vomitos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vómitos</label>
    <type>Checkbox</type>
</CustomField>