force-app/main/default/objects/Tratamiento__c/recordTypes/Tratamiento_Best_Care.recordType-meta.xml
<RecordType>
    <fullName>Tratamiento_Best_Care</fullName>
    <active>true</active>
    <label>Tratamiento Best Care</label>
</RecordType>