force-app/main/default/objects/Tratamiento__c/recordTypes/Tratamiento_Regular.recordType-meta.xml
<RecordType>
    <fullName>Tratamiento_Regular</fullName>
    <active>true</active>
    <label>Tratamiento Regular</label>
</RecordType>