force-app/main/default/objects/Tratamiento__c/validationRules/Ctro_diagnostico_solo_para_metabolico.validationRule-meta.xml
<ValidationRule>
    <fullName>Ctro_diagnostico_solo_para_metabolico</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Area_terapeutica__c , &apos;Metabólicos&apos;)),
NOT(ISBLANK(Centro_de_Diagnostico__c))
)</errorConditionFormula>
    <errorDisplayField>Centro_de_Diagnostico__c</errorDisplayField>
    <errorMessage>Solo puede elegir un centro de diagnóstico si el área terapéutica es Metabólicos</errorMessage>
</ValidationRule>