force-app/main/default/objects/Tratamiento__c/validationRules/Desafio_solo_para_alergia.validationRule-meta.xml
<ValidationRule>
    <fullName>Desafio_solo_para_alergia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Desafio__c, &apos;Sí&apos;),
NOT(ISPICKVAL(Cuenta__r.Area_terapeutica__c , &apos;Alergia&apos;))
)</errorConditionFormula>
    <errorDisplayField>Desafio__c</errorDisplayField>
    <errorMessage>No puede seleccionar Desafío si el paciente no es de Alergia</errorMessage>
</ValidationRule>