force-app/main/default/objects/Tratamiento__c/validationRules/Fecha_de_desafio.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_desafio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Desafio__c,&apos;Sí&apos;)),
NOT(ISBLANK(Fecha_de_desafio__c))
)</errorConditionFormula>
    <errorDisplayField>Desafio__c</errorDisplayField>
    <errorMessage>No puede seleccionar Fecha de desafío si no ha seleccionado la opción &apos;Sí&apos;</errorMessage>
</ValidationRule>