force-app/main/default/objects/Tratamiento__c/validationRules/Motivo_de_kit_solo_alergia_y_no_diag.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_kit_solo_alergia_y_no_diag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Diagnostico__c , &apos;No&apos;)),
  NOT(ISBLANK(TEXT(Motivo_De_Kit__c)))
)</errorConditionFormula>
    <errorDisplayField>Motivo_De_Kit__c</errorDisplayField>
    <errorMessage>Solo puede seleccionar motivo de kit si no tiene diagnóstico</errorMessage>
</ValidationRule>