force-app/main/default/objects/Tratamiento__c/validationRules/Reinternacion_y_ctro_de_internacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Reinternacion_y_ctro_de_internacion</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Reinternacion__c = false, NOT(ISBLANK( Centro_de_internacion__c ))|| NOT(ISBLANK( Fecha_probable_de_alta__c )))</errorConditionFormula>
    <errorDisplayField>Reinternacion__c</errorDisplayField>
    <errorMessage>No puede seleccionar un centro de internación o fecha probable de alta si Reinternación no está tildado</errorMessage>
</ValidationRule>