force-app/main/default/objects/Tratamiento__c/validationRules/Tratamiento_BC_solo_para_paciente_BC.validationRule-meta.xml
<ValidationRule>
    <fullName>Tratamiento_BC_solo_para_paciente_BC</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &apos;Tratamiento Best Care&apos;,  Cuenta__r.RecordType.Name = &apos;Paciente Regular&apos;)</errorConditionFormula>
    <errorDisplayField>Cuenta__c</errorDisplayField>
    <errorMessage>Un paciente regular no puede tener un tratamiento Best Care</errorMessage>
</ValidationRule>