force-app/main/default/objects/Tratamiento__c/validationRules/Tratamiento_reg_solo_para_paciente_reg.validationRule-meta.xml
<ValidationRule>
    <fullName>Tratamiento_reg_solo_para_paciente_reg</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &apos;Tratamiento Regular&apos;, Cuenta__r.RecordType.Name = &apos;Paciente Best Care&apos;)</errorConditionFormula>
    <errorDisplayField>Cuenta__c</errorDisplayField>
    <errorMessage>Un paciente Best Care no puede tener un tratamiento regular</errorMessage>
</ValidationRule>